2015-03-23 Daniel Neugebauer <dneuge@glutrot.de>
	* compatibility with TYPO3 6.2

2014-11-19 Daniel Neugebauer <dneuge@glutrot.de>
	* check for new parameter tt_news.single_page.*.keepListedAsPage to keep single view pages listed

2014-09-04 Jonas Felix <jf@cabag.ch>
	* version 0.4.4
	* Security fix typo3-ext-sa-2014-010
	* Minor cleanups
	* fixes potential sql injection in backend

07-04-30 Marcel Alburg  <alb@weeaar.com>
	* Bugfix for single language projects (Thanks to Martin Scholl [ms@globalinfinity.de])

06-10-23 Marcel Alburg  <alb@weeaar.com>

	* Initial release