@@ -178,39 +178,60 @@ class tx_weeaargooglesitemap_pi1 extends tslib_pibase {
 					if (!strpos($no, ".")) {
 						if (isset($this->conf["tt_news."]["single_page."]["{$no}."]["pid_list"]) && $this->conf["tt_news."]["single_page."]["{$no}."]["pid_list"] != "") {
 							$now_utime = time();
-                            $pid_list = preg_replace('/[^0-9,]/', '', $this->conf["tt_news."]["single_page."]["{$no}."]["pid_list"]); // simple sanitization
-                            
-                            // should news schema be used to annotate this news block for news crawlers?
-                            // only use if activated (news_schema = 1) and required tags have been entered
-                            // see: https://support.google.com/news/publisher/answer/74288?hl=en
-                            $block_uses_news_schema = isset($this->conf["tt_news."]["single_page."]["{$no}."]["news_schema"]) &&
-                                                      ($this->conf["tt_news."]["single_page."]["{$no}."]["news_schema"] == 1) &&
-                                                      isset($this->conf["tt_news."]["single_page."]["{$no}."]["news_schema."]["publication."]["name"]) &&
-                                                      (trim($this->conf["tt_news."]["single_page."]["{$no}."]["news_schema."]["publication."]["name"]) != '') &&
-                                                      isset($this->conf["tt_news."]["single_page."]["{$no}."]["news_schema."]["publication."]["language"]) &&
-                                                      (trim($this->conf["tt_news."]["single_page."]["{$no}."]["news_schema."]["publication."]["language"]) != '');
-                            $this->useNewsSchema |= $block_uses_news_schema;
-                            
-                            // filter by archive state?
-                            $include_archived = true;
-                            $include_non_archived = true;
+							$pid_list = preg_replace('/[^0-9,]/', '', $this->conf["tt_news."]["single_page."]["{$no}."]["pid_list"]); // simple sanitization
+
+							// get parameter for storage page recursion
+							$recursive = 0;
+							if (isset($this->conf["tt_news."]["single_page."]["{$no}."]["recursive"])) {
+								$recursive = $this->cObj->stdWrap($this->conf["tt_news."]["single_page."]["{$no}."]["recursive"], $this->conf["tt_news."]["single_page."]["{$no}."]["recursive."]);
+								$recursive = is_numeric($recursive) ? $recursive : 0;
+							}
+
+							// expand storage pages if recursion has been requested
+							if ($recursive > 0) {
+								$original_pid_list = $pid_list;
+
+								$pid_list = implode(t3lib_div::intExplode(',', $pid_list), ',');
+								$pid_list = $this->pi_getPidList($pid_list, $recursive);
+
+								// reset to original list if expansion failed
+								// (otherwise the SQL query would fail)
+								if ($pid_list == '') {
+									$pid_list = $original_pid_list;
+								}
+							}
+
+							// should news schema be used to annotate this news block for news crawlers?
+							// only use if activated (news_schema = 1) and required tags have been entered
+							// see: https://support.google.com/news/publisher/answer/74288?hl=en
+							$block_uses_news_schema = isset($this->conf["tt_news."]["single_page."]["{$no}."]["news_schema"]) &&
+													  ($this->conf["tt_news."]["single_page."]["{$no}."]["news_schema"] == 1) &&
+													  isset($this->conf["tt_news."]["single_page."]["{$no}."]["news_schema."]["publication."]["name"]) &&
+													  (trim($this->conf["tt_news."]["single_page."]["{$no}."]["news_schema."]["publication."]["name"]) != '') &&
+													  isset($this->conf["tt_news."]["single_page."]["{$no}."]["news_schema."]["publication."]["language"]) &&
+													  (trim($this->conf["tt_news."]["single_page."]["{$no}."]["news_schema."]["publication."]["language"]) != '');
+							$this->useNewsSchema |= $block_uses_news_schema;
+
+							// filter by archive state?
+							$include_archived = true;
+							$include_non_archived = true;
 							if (isset($this->conf["tt_news."]["single_page."]["$no."]["archive_mode"])) {
-                                $archive_mode = trim(strtoupper($this->conf["tt_news."]["single_page."]["$no."]["archive_mode"]));
-                                if ($archive_mode == 'ARCHIVED') {
-                                    $include_non_archived = false;
-                                } else if ($archive_mode == 'NON-ARCHIVED') {
-                                    $include_archived = false;
-                                }
-                            }
-                            
+								$archive_mode = trim(strtoupper($this->conf["tt_news."]["single_page."]["$no."]["archive_mode"]));
+								if ($archive_mode == 'ARCHIVED') {
+									$include_non_archived = false;
+								} else if ($archive_mode == 'NON-ARCHIVED') {
+									$include_archived = false;
+								}
+							}
+
 							// Look in the Config: If a backpid is set, transfer this information to the $param array
 							if (isset($this->conf["tt_news."]["single_page."]["$no."]["backpid"])) {
 								$tt_news_backpid = $this->conf["tt_news."]["single_page."]["$no."]["backpid"];
 							} else {
 								$tt_news_backpid = "";
 							}
-                            
-                            // get all categories
+
+							// get all categories
 							if (isset($this->conf["tt_news."]["single_page."]["$no."]["cat_id_list"])) {
 								// Ok, we must look, if the news is linked to the category
 								$cat_id_lists = explode(",", $this->conf["tt_news."]["single_page."]["$no."]["cat_id_list"]);
@@ -224,73 +245,73 @@ class tx_weeaargooglesitemap_pi1 extends tslib_pibase {
 									}
 									$sql_addon.=")";
 								}
-                                
-                                // get all original language or untranslated news by categories
+
+								// get all original language or untranslated news by categories
 								$res = $this->db->exec_SELECTquery("tt_news.uid, tt_news.title, tt_news.datetime, tt_news.sys_language_uid, tt_news.tstamp, tt_news.keywords, tt_news_cat_mm.uid_foreign, tt_news.archivedate", "tt_news, tt_news_cat_mm", "tt_news.l18n_parent = 0 and tt_news_cat_mm.uid_local = tt_news.uid and tt_news.pid in (" . $pid_list . ") and tt_news.hidden != 1 and tt_news.deleted != 1 and (tt_news.starttime = 0 OR tt_news.starttime <= '$now_utime') and (tt_news.endtime = 0 OR tt_news.endtime >= '$now_utime')$sql_addon", "tt_news.uid");
-                                
-                                while ($row = $GLOBALS['TYPO3_DB']->sql_fetch_assoc($res)) {
-                                    $row[backpid] = $tt_news_backpid;
-                                    $this->data["news"][$this->conf["tt_news."]["single_page."][$no]][] = $row;
-                                }
-                                
-                                // get all translated news by translation parent's categories
-                                // has to use parent UID
-                                // has to also check parent visibility
-                                // archive state is only checked against parent
+
+								while ($row = $GLOBALS['TYPO3_DB']->sql_fetch_assoc($res)) {
+									$row[backpid] = $tt_news_backpid;
+									$this->data["news"][$this->conf["tt_news."]["single_page."][$no]][] = $row;
+								}
+
+								// get all translated news by translation parent's categories
+								// has to use parent UID
+								// has to also check parent visibility
+								// archive state is only checked against parent
 								$res = $this->db->exec_SELECTquery("tt_news_parent.uid, tt_news.title, tt_news.datetime, tt_news.sys_language_uid, tt_news.tstamp, tt_news.keywords, tt_news_cat_mm.uid_foreign, tt_news_parent.archivedate", "tt_news, tt_news_cat_mm, tt_news as tt_news_parent", "tt_news_parent.uid = tt_news.l18n_parent and tt_news.l18n_parent != 0 and tt_news_cat_mm.uid_local = tt_news_parent.uid and tt_news.pid in (" . $pid_list . ") and tt_news.hidden != 1 and tt_news.deleted != 1 and (tt_news.starttime = 0 OR tt_news.starttime <= '$now_utime') and (tt_news.endtime = 0 OR tt_news.endtime >= '$now_utime') and tt_news_parent.hidden != 1 and tt_news_parent.deleted != 1 and (tt_news_parent.starttime = 0 OR tt_news_parent.starttime <= '$now_utime') and (tt_news_parent.endtime = 0 OR tt_news_parent.endtime >= '$now_utime')$sql_addon", "tt_news.uid");
-                                
-                                while ($row = $GLOBALS['TYPO3_DB']->sql_fetch_assoc($res)) {
-                                    $row[backpid] = $tt_news_backpid;
-                                    $this->data["news"][$this->conf["tt_news."]["single_page."][$no]][] = $row;
-                                }
+
+								while ($row = $GLOBALS['TYPO3_DB']->sql_fetch_assoc($res)) {
+									$row[backpid] = $tt_news_backpid;
+									$this->data["news"][$this->conf["tt_news."]["single_page."][$no]][] = $row;
+								}
 							}
 							else {
-                                // get all original language or untranslated news
+								// get all original language or untranslated news
 								$res = $this->db->exec_SELECTquery("uid, title, datetime, sys_language_uid, tstamp, keywords, archivedate", "tt_news", "tt_news.l18n_parent = 0 and pid in (" . $pid_list . ") and hidden != 1 and deleted != 1 and (starttime = 0 OR starttime <= '$now_utime') and (endtime = 0 OR endtime >= '$now_utime')");
-                                
-                                while ($row = $GLOBALS['TYPO3_DB']->sql_fetch_assoc($res)) {
-                                    $row[backpid] = $tt_news_backpid;
-                                    $this->data["news"][$this->conf["tt_news."]["single_page."][$no]][] = $row;
-                                }
-                                
-                                // get all translated news
-                                // has to use parent UID
-                                // has to also check parent visibility
-                                // archive state is only checked against parent
+
+								while ($row = $GLOBALS['TYPO3_DB']->sql_fetch_assoc($res)) {
+									$row[backpid] = $tt_news_backpid;
+									$this->data["news"][$this->conf["tt_news."]["single_page."][$no]][] = $row;
+								}
+
+								// get all translated news
+								// has to use parent UID
+								// has to also check parent visibility
+								// archive state is only checked against parent
 								$res = $this->db->exec_SELECTquery("tt_news_parent.uid, tt_news.title, tt_news.datetime, tt_news.sys_language_uid, tt_news.tstamp, tt_news.keywords, tt_news_parent.archivedate", "tt_news, tt_news as tt_news_parent", "tt_news.l18n_parent = tt_news_parent.uid and tt_news.l18n_parent != 0 and tt_news.pid in (" . $pid_list . ") and tt_news.hidden != 1 and tt_news.deleted != 1 and (tt_news.starttime = 0 OR tt_news.starttime <= '$now_utime') and (tt_news.endtime = 0 OR tt_news.endtime >= '$now_utime') and tt_news_parent.hidden != 1 and tt_news_parent.deleted != 1 and (tt_news_parent.starttime = 0 OR tt_news_parent.starttime <= '$now_utime') and (tt_news_parent.endtime = 0 OR tt_news_parent.endtime >= '$now_utime')");
-                                
-                                while ($row = $GLOBALS['TYPO3_DB']->sql_fetch_assoc($res)) {
-                                    $row[backpid] = $tt_news_backpid;
-                                    $this->data["news"][$this->conf["tt_news."]["single_page."][$no]][] = $row;
-                                }
+
+								while ($row = $GLOBALS['TYPO3_DB']->sql_fetch_assoc($res)) {
+									$row[backpid] = $tt_news_backpid;
+									$this->data["news"][$this->conf["tt_news."]["single_page."][$no]][] = $row;
+								}
 							}
-                            
-                            // filter by archive state
-                            if (!$include_archived || !$include_non_archived) {
-                                $filtered_rows = array();
-                                
-                                if (is_array($rows = $this->data["news"][$this->conf["tt_news."]["single_page."][$no]])) {
-                                    foreach ($rows as $row) {
-                                        $is_archived = ($row['archivedate'] != 0) && ($now_utime > $row['archivedate']);
-                                        if ($is_archived && $include_archived) {
-                                            $filtered_rows[] = $row;
-                                        } else if (!$is_archived && $include_non_archived) {
-                                            $filtered_rows[] = $row;
-                                        }
-                                    }
-                                }
-                                
-                                $this->data["news"][$this->conf["tt_news."]["single_page."][$no]] = $filtered_rows;
-                            }
-                            
-                            // copy configured news schema meta data
-                            // (configuration may not be uniform if multiple single_page entries have been defined)
-                            if ($block_uses_news_schema) {
-                                $num_rows = count($this->data["news"][$this->conf["tt_news."]["single_page."][$no]]);
-                                for ($i=0; $i<$num_rows; $i++) {
-                                    $this->data["news"][$this->conf["tt_news."]["single_page."][$no]][$i]['news_schema'] = $this->conf["tt_news."]["single_page."]["{$no}."]["news_schema."];
-                                }
-                            }
+
+							// filter by archive state
+							if (!$include_archived || !$include_non_archived) {
+								$filtered_rows = array();
+
+								if (is_array($rows = $this->data["news"][$this->conf["tt_news."]["single_page."][$no]])) {
+									foreach ($rows as $row) {
+										$is_archived = ($row['archivedate'] != 0) && ($now_utime > $row['archivedate']);
+										if ($is_archived && $include_archived) {
+											$filtered_rows[] = $row;
+										} else if (!$is_archived && $include_non_archived) {
+											$filtered_rows[] = $row;
+										}
+									}
+								}
+
+								$this->data["news"][$this->conf["tt_news."]["single_page."][$no]] = $filtered_rows;
+							}
+
+							// copy configured news schema meta data
+							// (configuration may not be uniform if multiple single_page entries have been defined)
+							if ($block_uses_news_schema) {
+								$num_rows = count($this->data["news"][$this->conf["tt_news."]["single_page."][$no]]);
+								for ($i=0; $i<$num_rows; $i++) {
+									$this->data["news"][$this->conf["tt_news."]["single_page."][$no]][$i]['news_schema'] = $this->conf["tt_news."]["single_page."]["{$no}."]["news_schema."];
+								}
+							}
 						}
 					}
 				}
@@ -345,64 +366,64 @@ class tx_weeaargooglesitemap_pi1 extends tslib_pibase {
 								$string .= "   <priority>0.5</priority>\n";
 
 								/* news sitemap */
-                                if ($this->useNewsSchema && isset($row['news_schema'])) {
-                                    // check news age
-                                    // Google says we should stop listing news 2 days after publication
-                                    $max_age_days = (isset($row['news_schema']['max_age_days']) ? intval($row['news_schema']['max_age_days']) : 2);
-                                    $age_days = ($now_utime - $row['datetime']) / 86400.0;
-                                    $is_older_than_allowed = ($age_days > $max_age_days);
-                                    
-                                    if (!$is_older_than_allowed) {
-                                        // find language
-                                        // start with default and override with sys_language_uid mapping
-                                        $language = $row['news_schema']['publication.']['language'];
-                                        if (isset($row['news_schema']['publication.']['language.'])) {
-                                            if (isset($row['news_schema']['publication.']['language.'][''.$row['sys_language_uid']]) && (trim($row['news_schema']['publication.']['language.'][''.$row['sys_language_uid']]) != '')) {
-                                                $language = trim($row['news_schema']['publication.']['language.'][''.$row['sys_language_uid']]);
-                                            }
-                                        }
-                                        
-                                        $string .= "   <news:news>\n";
-                                        
-                                        $string .= "      <news:publication>\n";
-                                        $string .= "         <news:name>" . htmlspecialchars($row['news_schema']['publication.']['name']) . "</news:name>\n";
-                                        $string .= "         <news:language>" . htmlspecialchars($language) . "</news:language>\n";
-                                        $string .= "      </news:publication>\n";
-                                        
-                                        $string .= "      <news:publication_date>" . gmdate("Y-m-d\TH:i:s\Z", $row["datetime"]) . "</news:publication_date>\n";
-                                        
-                                        $string .= "      <news:title>" . htmlspecialchars($row["title"]) . "</news:title>\n";
-                                        
-                                        if (isset($row['news_schema']['access'])) {
-                                            $string .= '      <news:access>' . htmlspecialchars($row['news_schema']['access']) . "</news:access>\n";
-                                        }
-                                        
-                                        if (isset($row['news_schema']['genres'])) {
-                                            $string .= '      <news:genres>' . htmlspecialchars($row['news_schema']['genres']) . "</news:genres>\n";
-                                        }
-                                        
-                                        // find keywords to use
-                                        // 1) start with default or empty string
-                                        $keywords = isset($row['news_schema']['keywords_default']) ? $row['news_schema']['keywords_default'] : '';
-                                        // 2) replace by news keywords if set
-                                        if ($row['keywords'] != '') {
-                                            $keywords = $row['keywords'];
-                                        }
-                                        // 3) allow override by config (including empty strings)
-                                        if (isset($row['news_schema']['keywords_override'])) {
-                                            $keywords = $row['news_schema']['keywords_override'];
-                                        }
-                                        $keywords = trim($keywords);
-                                        if ($keywords != '') {
-                                            $string .= "      <news:keywords>" . htmlspecialchars($keywords) . "</news:keywords>\n";
-                                        }
-                                        
-                                        if (isset($row['news_schema']['stock_tickers'])) {
-                                            $string .= '      <news:stock_tickers>' . htmlspecialchars($row['news_schema']['stock_tickers']) . "</news:stock_tickers>\n";
-                                        }
-                                        
-                                        $string .= "   </news:news>\n";
-                                    }
+								if ($this->useNewsSchema && isset($row['news_schema'])) {
+									// check news age
+									// Google says we should stop listing news 2 days after publication
+									$max_age_days = (isset($row['news_schema']['max_age_days']) ? intval($row['news_schema']['max_age_days']) : 2);
+									$age_days = ($now_utime - $row['datetime']) / 86400.0;
+									$is_older_than_allowed = ($age_days > $max_age_days);
+
+									if (!$is_older_than_allowed) {
+										// find language
+										// start with default and override with sys_language_uid mapping
+										$language = $row['news_schema']['publication.']['language'];
+										if (isset($row['news_schema']['publication.']['language.'])) {
+											if (isset($row['news_schema']['publication.']['language.'][''.$row['sys_language_uid']]) && (trim($row['news_schema']['publication.']['language.'][''.$row['sys_language_uid']]) != '')) {
+												$language = trim($row['news_schema']['publication.']['language.'][''.$row['sys_language_uid']]);
+											}
+										}
+
+										$string .= "   <news:news>\n";
+
+										$string .= "      <news:publication>\n";
+										$string .= "         <news:name>" . htmlspecialchars($row['news_schema']['publication.']['name']) . "</news:name>\n";
+										$string .= "         <news:language>" . htmlspecialchars($language) . "</news:language>\n";
+										$string .= "      </news:publication>\n";
+
+										$string .= "      <news:publication_date>" . gmdate("Y-m-d\TH:i:s\Z", $row["datetime"]) . "</news:publication_date>\n";
+
+										$string .= "      <news:title>" . htmlspecialchars($row["title"]) . "</news:title>\n";
+
+										if (isset($row['news_schema']['access'])) {
+											$string .= '      <news:access>' . htmlspecialchars($row['news_schema']['access']) . "</news:access>\n";
+										}
+
+										if (isset($row['news_schema']['genres'])) {
+											$string .= '      <news:genres>' . htmlspecialchars($row['news_schema']['genres']) . "</news:genres>\n";
+										}
+
+										// find keywords to use
+										// 1) start with default or empty string
+										$keywords = isset($row['news_schema']['keywords_default']) ? $row['news_schema']['keywords_default'] : '';
+										// 2) replace by news keywords if set
+										if ($row['keywords'] != '') {
+											$keywords = $row['keywords'];
+										}
+										// 3) allow override by config (including empty strings)
+										if (isset($row['news_schema']['keywords_override'])) {
+											$keywords = $row['news_schema']['keywords_override'];
+										}
+										$keywords = trim($keywords);
+										if ($keywords != '') {
+											$string .= "      <news:keywords>" . htmlspecialchars($keywords) . "</news:keywords>\n";
+										}
+
+										if (isset($row['news_schema']['stock_tickers'])) {
+											$string .= '      <news:stock_tickers>' . htmlspecialchars($row['news_schema']['stock_tickers']) . "</news:stock_tickers>\n";
+										}
+
+										$string .= "   </news:news>\n";
+									}
 								}
 								$this->tRows[] = "<url>\n{$string}</url>\n";
 							}
@@ -482,18 +503,18 @@ class tx_weeaargooglesitemap_pi1 extends tslib_pibase {
 			$singlePagesConfig = $this->conf["tt_news."]["single_page."];
 			foreach ($singlePagesConfig as $key => $singlePage) {
 				$isSinglePageConfigLeafNode = (strpos($key, ".") === false);
-				
+
 				// single pages are configured on parent level of detailed
 				// configuration, so we trigger on leaf nodes on first level
 				// beneath single_page
 				if ($isSinglePageConfigLeafNode) {
 					$shouldBeExcluded = true;
-					
+
 					$hasSubConfig = array_key_exists($key.'.', $singlePagesConfig);
 					if ($hasSubConfig) {
 						$shouldBeExcluded = !(array_key_exists('keepListedAsPage', $singlePagesConfig[$key.'.']) && ($singlePagesConfig[$key.'.']['keepListedAsPage'] != 0));
 					}
-					
+
 					if ($shouldBeExcluded) {
 						$this->excludedPages[] = $singlePage;
 					}
